-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.800 2010-10-13 23:24:30 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-10-15	pwessel
	* GMT 4.5.4 finalized and released. GMT 5.0.0alpha announced, get via cvs
-----------------------------------------------------------------------------------------
2010-10-13	pwessel
	* mapproject.c:		Did not reset azimuth to NaN at start of next segment.
	* psscale.c:		Give warning and skip any command-line file arguments.
	* pscoast.c:		Give warning and skip any command-line file arguments.
	* psbasemap.c:		Give warning and skip any command-line file arguments.

2010-10-05	pwessel
	* configure.ac:		Set correct mex extensions for 64-bit version.
	
2010-09-29	pwessel
	* share/time/hi.d:	Added Hawaiian time language items.

2010-09-28	remko
	* gmt_mgg.c:		Use GMT_getsharepath to find gmtfile_paths file.

2010-09-27	pwessel
	* gmt_map.c:		Did not check if nodes were beyond the horizon in GMT_grd_project.
				Also did not initialize output grid to NaNs before filling.

2010-09-20	pwessel
	* ps2raster.c:		Made tolerant of \r-only line-endings.

2010-09-15	pwessel
	* sph/Makefile:		Did not have LDFLAGS in link statement.

2010-09-07	pwessel
	* ps2raster.c:		The -A- option did not reset -A for -W.
	* grdtrack.c:		Did not ensure that given -R was adjusted to fit grid spacing
	* minmax.c:		With -I, could end up returning -R355/0/... since 360 becomes 0.

2010-09-03	pwessel
	* misc/gmtstitch.c:	Could crash if -C was used.

2010-08-30	pwessel
	* nearneighbor.c:	Did not check that -S was not set.

2010-08-25	pwessel
	* psxy[z].c:		Units given in -S without sizes (e.g., -Sci) would be
				ignored and overridden by MEASURE_UNIT.

2010-08-21	pwessel
	* misc/gmt2kml.c:	Did not parse -D"description" for points.

2010-08-19	pwessel